<resources>
    <string name="app_name">SreepCreep</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="password">Enter You Password Please</string>
    <string name="username">Enter the name which piyush calls you</string>

    <string name="sign_in">Toh Chale?</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email

        completions."
    </string>

    <string name="title_activity_fullscreen">Hello Tiny Girl</string>
    <string name="dummy_button">Don\'t Press This Button</string>
    <string name="dummy_content">Hey Pree, Sup?</string>
    <string name="title_activity_scrolling">Hey Tiny Girl</string>
    <string name="large_text">
        "Friendship is just more than hey, sup?, how're you?\n\n"
        "The day I met you .\n.\n.\n.\n.\n.\n.\n..\n.\n.\n.\n.\n.\n.\n..\n.\n.\n.\n.\n.\n.\n..\n.\n.\n.\n.\n.\n.\n. terko lagta hai agar mai teri taareef krunga to ye teri galat faimi hai"
       "Btw it's very tough to type in markdown, so, kaisi h?"
        "I hope you're doing well! you're now 19!, So any plans?"
    </string>
    <string name="action_settings">Settings</string>
    <string name="pic">image1</string>
    <string name="str_img1">you are the best</string>
    <string name="str_img2">thanks</string>
    <string name="str_img3">aur kaisi h?</string>
    <string name="str_img4">another string</string>
    <string name="str_img5">ek</string>
    <string name="So">Oye press this</string>
</resources>